--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,10 @@
 .App {
-  text-align: center;
+  text-align: left;
+  max-width: 800px;
+  display: block;
+  margin: 0 auto;
 }
 .App-footer {
   margin: 30px 0;
+  text-align: center;
 }
