--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,10 @@
   display: block;
   margin: 0 auto;
 }
+.App-header {
+  margin: 30px 0;
+  text-align: center;
+}
 .App-footer {
   margin: 30px 0;
   text-align: center;
