--- a/src/Dictionary.css
+++ b/src/Dictionary.css
@@ -2,14 +2,17 @@
   font-size: 18px;
   font-weight: bold;
   margin-bottom: 20px;
+  font-family: monospace;
 }
 
 .Dictionary section {
   background: white;
+  opacity: 90%;
   padding: 30px;
   border-radius: 6px;
   box-shadow: 0 10px 20px rgb(0 0 0 / 10%);
   margin: 20px 0;
+  font-family: monospace;
 }
 
 .Dictionary input {
@@ -18,8 +21,10 @@
   padding: 6px 10px;
   color: #333;
   border: 1px solid #ddd;
+  font-family: monospace;
 }
 
 .Dictionary h5 {
   text-align: center;
+  font-family: monospace;
 }
