--- a/src/Dictionary.css
+++ b/src/Dictionary.css
@@ -3,16 +3,17 @@
   font-weight: bold;
   margin-bottom: 20px;
   font-family: monospace;
+  color: #5c6b31;
 }
 
 .Dictionary section {
   background: white;
-  opacity: 90%;
   padding: 30px;
   border-radius: 6px;
   box-shadow: 0 10px 20px rgb(0 0 0 / 10%);
   margin: 20px 0;
   font-family: monospace;
+  opacity: 70%;
 }
 
 .Dictionary input {
